Temporarily deploy only Cloud Functions to test authentication
Remove firestore:rules and firestore:indexes from deployment target
to isolate and resolve Cloud Functions deployment first.
Firebase Rules deployment can be added back once basic deployment works.

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -106,7 +106,7 @@ jobs:
     - name: Deploy to Firebase
       run: |
         echo "🚀 Deploying to Firebase..."
-        firebase deploy --only functions,firestore:rules,firestore:indexes --project ichizen-daily-good-deeds
+        firebase deploy --only functions --project ichizen-daily-good-deeds
 
     - name: Deployment notification
       if: success()
