--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -106,7 +106,7 @@ jobs:
     - name: Deploy to Firebase
       run: |
         echo "🚀 Deploying to Firebase..."
-        firebase deploy --only functions --project ichizen-daily-good-deeds --debug
+        FIREBASE_DEPLOY_AGENT=github-actions firebase deploy --only functions --project ichizen-daily-good-deeds --force
 
     - name: Deployment notification
       if: success()
