Add Firebase Extensions viewer permission and debug logging
Added roles/firebaseextensions.viewer to the Firebase service account
to fix deployment permission error. Also added logging to verify
which service account is being used during deployment.

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -106,6 +106,7 @@ jobs:
     - name: Deploy to Firebase
       run: |
         echo "🚀 Deploying to Firebase..."
+        echo "🔐 Using service account: $GOOGLE_APPLICATION_CREDENTIALS"
         FIREBASE_DEPLOY_AGENT=github-actions firebase deploy --only functions --project ichizen-daily-good-deeds --force
 
     - name: Deployment notification
