Enable Cloud Billing API and retry deployment
Enabled cloudbilling.googleapis.com API which is required for
Firebase Functions deployment. This should resolve the 403 permission
error during deployment.

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -107,6 +107,7 @@ jobs:
       run: |
         echo "🚀 Deploying to Firebase..."
         echo "🔐 Using service account: $GOOGLE_APPLICATION_CREDENTIALS"
+        echo "💾 Cloud Billing API enabled"
         FIREBASE_DEPLOY_AGENT=github-actions firebase deploy --only functions --project ichizen-daily-good-deeds --force
 
     - name: Deployment notification
