Modernize CI/CD infrastructure with ESLint v9 and ES Modules
Technical Infrastructure Updates:
- Upgrade to ESLint v9 with flat config format across all workspaces
- Implement comprehensive ES Modules support for Node.js compatibility
- Add automated code formatting with Husky + lint-staged + Prettier
- Unify TypeScript configuration for better type safety

Core Improvements:
- Convert all config files to modern ES Modules format (.mjs, export default)
- Add proper __filename/__dirname handling for ES Modules
- Fix Jest configuration for ESM compatibility with moduleNameMapper
- Resolve Firebase Admin SDK import path issues (.js extensions)

CI/CD Enhancements:
- Fix GitHub Actions environment variables (HUSKY=0 for CI)
- Add comprehensive test coverage with proper mocking
- Implement Google Style Guide compliance with Prettier
- Ensure consistent formatting across all file types

This modernization provides:
- Future-proof configuration aligned with Node.js ES Modules standards
- Improved developer experience with automated formatting
- Better type safety and reduced maintenance burden
- Consistent code quality enforcement across the entire monorepo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,43 +2,45 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test:
     name: Test and Type Check
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: [20.x]
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      
+          cache: "npm"
+
       - name: Install root dependencies
+        env:
+          HUSKY: 0
         run: npm install
-      
+
       - name: Install mobile app dependencies
         working-directory: ./apps/mobile
         run: npm install
-      
+
       - name: Install Functions dependencies
         working-directory: ./functions
         run: npm install
-      
+
       - name: Setup Firebase CLI
         run: npm install -g firebase-tools
-      
+
       - name: Start Firebase Emulators
         working-directory: ./
         run: |
@@ -46,17 +48,17 @@ jobs:
           sleep 10
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      
+
       - name: Run type check
         working-directory: ./apps/mobile
         run: npm run typecheck
-      
+
       - name: Run unit tests
         working-directory: ./apps/mobile
         run: npm test -- --watchAll=false --coverage
         env:
           CI: true
-      
+
       # Temporarily disable E2E tests for faster CI
       # - name: Run E2E tests
       #   working-directory: ./apps/mobile
@@ -65,7 +67,7 @@ jobs:
       #     npm run test:e2e
       #   env:
       #     CI: true
-      
+
       - name: Upload test coverage
         uses: codecov/codecov-action@v3
         with:
@@ -78,27 +80,31 @@ jobs:
     name: Build Check
     runs-on: ubuntu-latest
     needs: test
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-          cache: 'npm'
-      
+          node-version: "20.x"
+          cache: "npm"
+
       - name: Install dependencies
+        env:
+          HUSKY: 0
         working-directory: ./apps/mobile
         run: npm install
-      
+
       - name: Build mobile app
         working-directory: ./apps/mobile
         run: npx expo export --platform web
-      
+
       - name: Build Functions
         working-directory: ./functions
+        env:
+          HUSKY: 0
         run: |
           npm install
           npm run build
@@ -106,21 +112,21 @@ jobs:
   security:
     name: Security Audit
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-          cache: 'npm'
-      
+          node-version: "20.x"
+          cache: "npm"
+
       - name: Run security audit
         working-directory: ./apps/mobile
         run: npm audit --audit-level moderate
-      
+
       - name: Run Functions security audit
         working-directory: ./functions
         run: npm audit --audit-level moderate
