--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -37,7 +37,8 @@
       "package": "com.yourcompany.ichizen"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     }
   }
 }
