--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,6 +2,7 @@
   "name": "mobile",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "dev": "expo start",
@@ -17,7 +18,8 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
-    "lint": "echo \"No linting configured yet\"",
+    "lint": "eslint src/ --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint src/ --ext .ts,.tsx,.js,.jsx --fix",
     "typecheck": "tsc --noEmit",
     "seed": "npx tsx scripts/seed-data.ts"
   },
@@ -48,11 +50,19 @@
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-native": "^5.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "firebase": "^11.9.1",
     "firebase-tools": "^14.6.0",
     "jest": "^29.7.0",
     "jest-expo": "^53.0.7",
     "metro-react-native-babel-preset": "^0.77.0",
+    "prettier": "^3.5.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-test-renderer": "^19.0.0",
     "ts-node": "^10.9.2",
