--- a/functions/package.json
+++ b/functions/package.json
@@ -16,19 +16,22 @@
     "node": "20"
   },
   "main": "lib/index.js",
+  "type": "module",
   "dependencies": {
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
     "@types/jest": "^29.5.0",
-    "eslint": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
     "jest": "^29.5.0",
+    "prettier": "^3.5.3",
     "ts-jest": "^29.1.0",
     "typescript": "^5.7.3"
   },
