--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,7 +1,7 @@
 name: iOS Build Test
 
 on:
-  workflow_dispatch: # 手動実行可能
+  workflow_dispatch: # Manual trigger
   push:
     branches: [main, develop]
     paths:
@@ -48,31 +48,37 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: Install pods
+      - name: Prebuild iOS
         working-directory: apps/mobile
         run: |
-          if [ -d "ios" ]; then
-            cd ios
-            pod install --repo-update
-          else
-            echo "iOS directory not found. Running prebuild..."
-            npx expo prebuild --platform ios --no-install
-            cd ios
-            pod install --repo-update
-          fi
+          # Generate native iOS project
+          npx expo prebuild --platform ios --clean
+
+      - name: Install pods
+        working-directory: apps/mobile/ios
+        run: |
+          # Install CocoaPods dependencies
+          pod install --repo-update
 
       - name: Build iOS app for simulator
-        working-directory: apps/mobile
+        working-directory: apps/mobile/ios
         run: |
-          # Simulator用にビルド（実デバイス用ではない）
-          npx react-native build-ios --simulator --scheme "ichizen" --mode "Release"
+          # Build for simulator (not for real device)
+          xcodebuild -workspace ichizen.xcworkspace \
+            -scheme ichizen \
+            -configuration Release \
+            -sdk iphonesimulator \
+            -derivedDataPath build \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO
 
       - name: Archive iOS build
         if: success()
         uses: actions/upload-artifact@v4
         with:
           name: ios-build-${{ github.sha }}
-          path: apps/mobile/ios/build/Build/Products/Release-iphonesimulator/*.app
+          path: apps/mobile/ios/build/Build/Products/*/*.app
           retention-days: 7
 
       - name: Summary
