Add proper Android/iOS build artifacts to .gitignore
- Add android/.gradle/ directory (11MB of build cache)
- Add android/app/build/ and android/build/ directories
- Add android local properties and IDE files
- Add iOS build artifacts (build/, Pods/, Podfile.lock)
- Prevent committing Gradle cache and build outputs to repository

This fixes the issue where Gradle cache was being tracked in git

--- a/apps/mobile/.gitignore
+++ b/apps/mobile/.gitignore
@@ -18,6 +18,21 @@ expo-env.d.ts
 *.key
 *.mobileprovision
 
+# Android
+android/.gradle/
+android/app/build/
+android/build/
+android/local.properties
+android/.idea/
+android/*.iml
+android/gradle-wrapper.jar
+android/.gradletasknamecache
+
+# iOS
+ios/build/
+ios/Pods/
+ios/Podfile.lock
+
 # Metro
 .metro-health-check*
 
