--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Generate dummy Firebase config for CI
+        run: node scripts/generate-ci-firebase-config.js
+
       - name: Build mobile app
         run: npm run mobile:build
 
