--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -31,6 +31,7 @@
     "env:validate": "npx tsx -e \"import('./src/config/env').then(() => console.log('✅ Environment validation passed'))\"",
     "seed": "npx tsx scripts/seed-data.ts",
     "check": "npm run typecheck && npm run lint && npm run env:validate",
+    "ci:setup": "node ../../scripts/generate-ci-firebase-config.js",
     "prebuild": "npx expo prebuild --platform ios --clean",
     "prebuild:android": "npx expo prebuild --platform android --clean",
     "build:ios": "cd ios && xcodebuild -workspace ichizen.xcworkspace -scheme ichizen -configuration Debug -sdk iphonesimulator -arch arm64 -derivedDataPath build build-for-testing CODE_SIGN_IDENTITY=\"\" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO ONLY_ACTIVE_ARCH=YES COMPILER_INDEX_STORE_ENABLE=NO",
