test: Verify pre-commit hooks functionality

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "packageManager": "npm@10.8.2",
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
+      "eslint --fix",
       "prettier --write"
     ],
     "*.{json,md,yml,yaml}": [
