--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,7 +20,9 @@
     "build:staging": "dotenv -f .env.staging -- expo export",
     "build:prod": "dotenv -f .env.production -- expo export",
     "test": "jest",
-    "test:ci": "NODE_OPTIONS='--max-old-space-size=4096' jest --watchAll=false --runInBand --detectOpenHandles --forceExit",
+    "test:ci": "npm run test:ci:unit && npm run test:ci:integration",
+    "test:ci:unit": "NODE_OPTIONS='--max-old-space-size=3072' jest __tests__/{DailyTask,DoneButton,DoneFeedback,TabNavigation,dateFormat,cloudFunctions.service}.test.{ts,tsx} --watchAll=false --runInBand --forceExit --clearCache",
+    "test:ci:integration": "NODE_OPTIONS='--max-old-space-size=3072' jest __tests__/{AuthContext,CounterStatistics,FirebaseIntegration,FollowNotificationService,FollowScreen,GlobalCounter,GlobalCounterPersistence,HistoryScreen,NotificationService}.test.{ts,tsx} --watchAll=false --runInBand --forceExit --clearCache",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
